# tdtui

./: .gitignore  README.md  main.py  pyproject.toml
saving_system/: save_state.py
todo-tui/: __init__.py  main.py
todo-tui/widgets/pop_ups/: task_properties.py
todo-tui/widgets/tasks_widgets/: task.py  tasks_list.py
todo_tui/: main.py  save_state.py
widgets/input_widgets/: add_task.py  add_task_field.py  select_color.py  task_name.py
widgets/pop_ups/: existing_task_error.py  task_properties.py
widgets/tasks_widgets/: completed_tasks_list.py  incompleted_tasks_list.py  task.py  tasks_list.py
